--- a/app/docs/components/TravelMapComponent.html
+++ b/app/docs/components/TravelMapComponent.html
@@ -660,13 +660,13 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <span class="modifier-icon icon ion-ios-reset"></span><code>_cruiseLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>_cruiseLines:     <code>Array&lt;Polyline&gt;</code>
 </code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                            <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
 
                         </td>
                     </tr>
@@ -695,13 +695,13 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <span class="modifier-icon icon ion-ios-reset"></span><code>_flightLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>_flightLines:     <code>Array&lt;Polyline&gt;</code>
 </code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                            <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
 
                         </td>
                     </tr>
@@ -1150,13 +1150,13 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <span class="modifier-icon icon ion-ios-reset"></span><code>_upcomingCruiseLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>_upcomingCruiseLines:     <code>Array&lt;Polyline&gt;</code>
 </code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                            <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
 
                         </td>
                     </tr>
@@ -1185,13 +1185,13 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <span class="modifier-icon icon ion-ios-reset"></span><code>_upcomingFlightLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>_upcomingFlightLines:     <code>Array&lt;Polyline&gt;</code>
 </code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
+                            <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
 
                         </td>
                     </tr>
@@ -1317,8 +1317,8 @@ export class TravelMapComponent implements OnInit {
   private _additionalMarkerWait: number;
   private _markerDropWait: number;
   private _cityMarkers: Array&lt;Marker&gt;;
-  private _cruiseLines: Array&lt;Array&lt;Polyline&gt;&gt;;
-  private _flightLines: Array&lt;Array&lt;Polyline&gt;&gt;;
+  private _cruiseLines: Array&lt;Polyline&gt;;
+  private _flightLines: Array&lt;Polyline&gt;;
   private _railPaths: Array&lt;string&gt;;
   private _mapMarkersDrawn: boolean;
   private _mapUtil: MapUtil;
@@ -1328,8 +1328,8 @@ export class TravelMapComponent implements OnInit {
   private _tilesLoaded: boolean;
   private _tilesLoadedEvent: any;
   private _timeoutScroll: any;
-  private _upcomingCruiseLines: Array&lt;Array&lt;Polyline&gt;&gt;;
-  private _upcomingFlightLines: Array&lt;Array&lt;Polyline&gt;&gt;;
+  private _upcomingCruiseLines: Array&lt;Polyline&gt;;
+  private _upcomingFlightLines: Array&lt;Polyline&gt;;
   private _upcomingRailPaths: Array&lt;string&gt;;
   private _railPathsLoaded: boolean;
 
