--- a/app/docs/components/ContactFormComponent.html
+++ b/app/docs/components/ContactFormComponent.html
@@ -140,6 +140,10 @@
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
+                                <a href="#fb">fb</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#form">form</a>
                             </li>
                             <li>
@@ -231,7 +235,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(_contactService: <a href="../injectables/ContactService.html">ContactService</a>, fb: <a href="https://angular.io/api/forms/FormBuilder" target="_blank">FormBuilder</a>)</code>
+<code>constructor(fb: <a href="https://angular.io/api/forms/FormBuilder" target="_blank">FormBuilder</a>, _contactService: <a href="../injectables/ContactService.html">ContactService</a>)</code>
                     </td>
                 </tr>
                         <tr>
@@ -254,10 +258,10 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>_contactService</td>
+                                                        <td>fb</td>
                                                   
                                                         <td>
-                                                                        <code><a href="../injectables/ContactService.html" target="_self" >ContactService</a></code>
+                                                                        <code><a href="https://angular.io/api/forms/FormBuilder" target="_blank" >FormBuilder</a></code>
                                                         </td>
                                                   
                                                     <td>
@@ -266,10 +270,10 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                        <td>fb</td>
+                                                        <td>_contactService</td>
                                                   
                                                         <td>
-                                                                        <code><a href="https://angular.io/api/forms/FormBuilder" target="_blank" >FormBuilder</a></code>
+                                                                        <code><a href="../injectables/ContactService.html" target="_self" >ContactService</a></code>
                                                         </td>
                                                   
                                                     <td>
@@ -810,6 +814,34 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
+                        <a name="fb"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            fb</b>
+                            <a href="#fb"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://angular.io/api/forms/FormBuilder" target="_blank" >FormBuilder</a></code>
+
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/components/contact/components/contact.form.ts:28</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
                         <a name="form"></a>
                         <span class="name">
                             <b>
@@ -1108,8 +1140,8 @@ export class ContactFormComponent implements OnInit {
   public submitting &#x3D; false;
   public form: FormGroup;
 
-  constructor(private _contactService: ContactService,
-              private fb: FormBuilder) {
+  constructor(public fb: FormBuilder,
+              private _contactService: ContactService) {
     this.form &#x3D; fb.group({
       email: this.email,
       heuning: this.heuning,
