--- a/src/app/components/footer/components/footer.html
+++ b/src/app/components/footer/components/footer.html
@@ -20,7 +20,7 @@
       <p><i class="icon-copyright"></i>&nbsp;{{currentDate | date:"yyyy"}} &ndash; HTML Template by <i><a href="https://themeforest.net/user/themeelite" target="_blank" rel="noopener" class="js_track_link_click" aria-label="Themeforest themeelite">themeelite</a></i></p>
       <p>Hosted on the <i><a href="https://heroku.com" target="_blank" rel="noopener" class="js_track_link_click" aria-label="Heroku">heroku.com</a></i> cloud platform</p>
       <p>Angular, TypeScript, SCSS</p>
-      <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener" aria-label="Standard style"><img class="js-standard-style" src="https://cdn.rawgit.com/feross/standard/master/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>
+      <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener" aria-label="Standard style"><img class="js-standard-style" src="/assets/images/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>
       <p><i class="icon-git"></i>&nbsp;Deployed from <a href="https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng-heroku" target="_blank" rel="noopener" class="js_track_link_click" aria-label="Github repo">this repo</a></p>
     </div>
   </div>
