--- a/src/app/components/about/components/about.scss
+++ b/src/app/components/about/components/about.scss
@@ -69,6 +69,7 @@
     }
 
     li > a {
+      line-height: 2;
       color: $white;
     }
 
@@ -80,7 +81,7 @@
     }
 
     @include respond-to($query: $breakpoint-810) {
-      li a {
+      li > a {
         line-height: 2.5;
         padding: 0.75em 0;
       }
