--- a/src/app/components/travel/components/travel.gmap.scss
+++ b/src/app/components/travel/components/travel.gmap.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   width: 100%;
   margin: 0;
+  background-color: $google-maps-background;
 
   .map-in-view {
     display: inline;
