--- a/src/assets/css/_common.scss
+++ b/src/assets/css/_common.scss
@@ -33,6 +33,7 @@ $midnight-express: #262B37;
 $black-russian: #1b1f2b;
 $black-forest: #1b1f29;
 $black: #000000;
+$google-maps-background: #e4e3df;
 $black-trans-point-7: rgba($black, .7);
 $black-forest-trans-point-8: rgba($black-forest, .8);
 
