--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -43,7 +43,7 @@ a {
   outline: none;
   cursor: pointer;
 
-  &:hover{
+  &:hover {
     color: $nordic;
     @include transition(all .2s ease-in);
   }
@@ -93,6 +93,7 @@ h4 {
   padding-bottom: 6px;
   font-weight: 600;
   margin: 0;
+
   &.sub-heading {
     font-weight: 600;
     font-size: 18px;
@@ -107,6 +108,7 @@ h5 {
   padding-bottom: 6px;
   font-weight: 400;
   margin: 0;
+
   &.sub-heading {
     font-weight: 500;
     font-size: 12px;
@@ -144,6 +146,10 @@ img.ng-lazyloaded {
 }
 
 @keyframes fadein {
-  from { opacity: 0.5; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
