--- a/src/assets/css/_google.fonts.scss
+++ b/src/assets/css/_google.fonts.scss
@@ -9,7 +9,11 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTT0LW-43aMEzIO6XUTLjad8.woff2) format('woff2');
+  src:
+    local('Open Sans Light'),
+    local('OpenSans-Light'),
+    url('../fonts/OpenSans-Light-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -19,7 +23,11 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  src:
+    local('Open Sans Light'),
+    local('OpenSans-Light'),
+    url('../fonts/OpenSans-Light.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -29,7 +37,11 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/u-WUoqrET9fUeobQW7jkRRJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
+  src:
+    local('Open Sans'),
+    local('OpenSans'),
+    url('../fonts/OpenSans-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -39,7 +51,11 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+  src:
+    local('Open Sans'),
+    local('OpenSans'),
+    url('../fonts/OpenSans.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -49,7 +65,11 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSj0LW-43aMEzIO6XUTLjad8.woff2) format('woff2');
+  src:
+    local('Open Sans Semibold'),
+    local('OpenSans-Semibold'),
+    url('../fonts/OpenSans-Semibold-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -59,7 +79,11 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSugdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  src:
+    local('Open Sans Semibold'),
+    local('OpenSans-Semibold'),
+    url('../fonts/OpenSans-Semibold.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -69,7 +93,11 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzD0LW-43aMEzIO6XUTLjad8.woff2) format('woff2');
+  src:
+    local('Open Sans Bold'),
+    local('OpenSans-Bold'),
+    url('../fonts/OpenSans-Bold-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -79,7 +107,11 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  src:
+    local('Open Sans Bold'),
+    local('OpenSans-Bold'),
+    url('../fonts/OpenSans-Bold.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -89,7 +121,11 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hj0LW-43aMEzIO6XUTLjad8.woff2) format('woff2');
+  src:
+    local('Open Sans Extrabold'),
+    local('OpenSans-Extrabold'),
+    url('../fonts/OpenSans-Extrabold-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -99,7 +135,11 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(https://fonts.gstatic.com/s/opensans/v13/EInbV5DfGHOiMmvb1Xr-hugdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  src:
+    local('Open Sans Extrabold'),
+    local('OpenSans-Extrabold'),
+    url('../fonts/OpenSans-Extrabold.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -109,7 +149,11 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxqvyPXdneeGd26m9EmFSSWg.woff2) format('woff2');
+  src:
+    local('Open Sans Light Italic'),
+    local('OpenSansLight-Italic'),
+    url('../fonts/OpenSansLight-Italic-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -119,7 +163,11 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxko2lTMeWA_kmIyWrkNCwPc.woff2) format('woff2');
+  src:
+    local('Open Sans Light Italic'),
+    local('OpenSansLight-Italic'),
+    url('../fonts/OpenSansLight-Italic.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -129,7 +177,11 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBiYE0-AqJ3nfInTTiDXDjU4.woff2) format('woff2');
+  src:
+    local('Open Sans Italic'),
+    local('OpenSans-Italic'),
+    url('../fonts/OpenSans-Italic-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -139,7 +191,11 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(https://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBo4P5ICox8Kq3LLUNMylGO4.woff2) format('woff2');
+  src:
+    local('Open Sans Italic'),
+    local('OpenSans-Italic'),
+    url('../fonts/OpenSans-Italic.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -149,7 +205,11 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxnywqdtBbUHn3VPgzuFrCy8.woff2) format('woff2');
+  src:
+    local('Open Sans Semibold Italic'),
+    local('OpenSans-SemiboldItalic'),
+    url('../fonts/OpenSans-SemiboldItalic-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -159,7 +219,11 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxl2umOyRU7PgRiv8DXcgJjk.woff2) format('woff2');
+  src:
+    local('Open Sans Semibold Italic'),
+    local('OpenSans-SemiboldItalic'),
+    url('../fonts/OpenSans-SemiboldItalic.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -169,7 +233,11 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxujkDdvhIIFj_YMdgqpnSB0.woff2) format('woff2');
+  src:
+    local('Open Sans Bold Italic'),
+    local('OpenSans-BoldItalic'),
+    url('../fonts/OpenSans-BoldItalic-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -179,7 +247,11 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxolIZu-HDpmDIZMigmsroc4.woff2) format('woff2');
+  src:
+    local('Open Sans Bold Italic'),
+    local('OpenSans-BoldItalic'),
+    url('../fonts/OpenSans-BoldItalic.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -189,7 +261,11 @@
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxowYyzpnB4tyYboSwKGmD2g.woff2) format('woff2');
+  src:
+    local('Open Sans Extrabold Italic'),
+    local('OpenSans-ExtraboldItalic'),
+    url('../fonts/OpenSans-ExtraboldItalic-ext.woff2')
+    format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -199,6 +275,10 @@
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url(https://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxnibbpXgLHK_uTT48UMyjSM.woff2) format('woff2');
+  src:
+    local('Open Sans Extrabold Italic'),
+    local('OpenSans-ExtraboldItalic'),
+    url('../fonts/OpenSans-ExtraboldItalic.woff2')
+    format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
