--- a/src/app/components/header/components/header.html
+++ b/src/app/components/header/components/header.html
@@ -5,7 +5,8 @@
       <ul class="cb-slideshow">
         <li class="js_cb-slideshow-tile" *ngFor="let imageId of imageIds">
           <a href="#" attr.aria-label="Instagram #{{imageId}}">
-            <img src="/assets/images/instagram/{{imageId}}.jpg" alt="© Louw Swart">
+<!--            <img src="/assets/images/instagram/{{imageId}}.jpg" alt="© Louw Swart">-->
+            <img src="https://www.instagram.com/p/{{imageId}}/media/?size=m" alt="© Louw Swart">
           </a>
         </li>
       </ul>
