--- a/src/app/components/header/components/header.html
+++ b/src/app/components/header/components/header.html
@@ -3,9 +3,9 @@
     <div id="ri-grid" class="ri-grid ri-grid-loading">
       <img class="ri-loading-image" src="assets/images/loading.gif" alt="Loading..." />
       <ul class="cb-slideshow">
-        <li class="js_cb-slideshow-tile" *ngFor="let imageId of imageIds">
-          <a href="#" attr.aria-label="Instagram #{{imageId}}">
-            <img src="https://www.instagram.com/p/{{imageId}}/media/?size=m" alt="© Louw Swart">
+        <li class="js_cb-slideshow-tile" *ngFor="let imageUrl of imageUrls; let i = index">
+          <a href="#" attr.aria-label="Instagram #{{i}}">
+            <img src="{{imageUrl}}" alt="© Louw Swart">
           </a>
         </li>
       </ul>
