--- a/src/app/components/footer/components/footer.html
+++ b/src/app/components/footer/components/footer.html
@@ -25,6 +25,6 @@
     </div>
   </div>
   <div class="last-modified">
-    <p><sup>Last updated: <%= LAST_MOD_SITE %></sup></p>
+    <p><sup>Updated: <%= LAST_MOD_SITE %></sup></p>
   </div>
 </section>
